--- a/belediyeler/pubspec.yaml
+++ b/belediyeler/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.6
   firebase_analytics: ^5.0.2
-
+  provider: ^4.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
