--- a/belediyeler/pubspec.yaml
+++ b/belediyeler/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cloud_firestore: ^0.13.6
   firebase_analytics: ^5.0.2
   provider: ^4.1.3
+  flutter_spinkit: ^4.1.2
+  firebase_database: ^3.1.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
