--- a/belediyeler/pubspec.yaml
+++ b/belediyeler/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   provider: ^4.1.3
   flutter_spinkit: ^4.1.2
   firebase_database: ^3.1.6
+  lazy_load_scrollview: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
